--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,14 @@
 
 /* Your CSS Code here. */
+
+
+.container{
+	width:200px;
+	color:white;
+	background-color:purple;
+	border-left:5px solid green;
+	padding:10px;
+	font-size:20px;
+	text-decoration:underline;
+}
+
