--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,12 @@
 /* Your CSS Code here. */
 
 
-.container{
+#heading{
 	width:200px;
-	color:white;
-	background-color:purple;
-	border-left:5px solid green;
+	color:rgb(255, 255, 255);
+	background-color:rgb(128, 0, 128);
+	border-left-width:5px;
+	border-left-color:rgb(0, 128, 0);
 	padding:10px;
 	font-size:20px;
 	text-decoration:underline;
