--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 /* Your CSS Code here. */
 
 
-.main{
+div.main{
 	width:200px;
 	color:rgb(255, 255, 255);
 	background-color:rgb(128, 0, 128);
@@ -11,5 +11,9 @@
 	padding:10px;
 	font-size:20px;
 	text-decoration:underline;
+}
+#heading{
+	font-size:20px;
+	color:rgb(255, 255, 255);
 }
 
