--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,7 @@ div.main{
 	width:200px;
 	color:rgb(255, 255, 255);
 	background-color:rgb(128, 0, 128);
-	border-left-width:5px;
-	border-left-color:rgb(0, 128, 0);
+	border-left:5px solid green;
 	padding:10px;
 	font-size:20px;
 	text-decoration:underline;
